force-app/main/default/objects/Operations__c/Operations__c.object-meta.xml
<CustomObject>
    <label>Operations</label>
    <nameField>
        <displayFormat>OO-{000}</displayFormat>
        <label>Operations</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>