force-app/main/default/objects/Operations__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Operations</relationshipLabel>
    <relationshipName>Operations</relationshipName>
    <type>Lookup</type>
</CustomField>