force-app/main/default/objects/Operations__c/fields/Engineering_Machine__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Machine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engineering Machine</label>
    <referenceTo>Engineering_Machine__c</referenceTo>
    <relationshipLabel>Operations</relationshipLabel>
    <relationshipName>Operations</relationshipName>
    <type>Lookup</type>
</CustomField>