force-app/main/default/objects/Operations__c/fields/Machine_and_Tools__c.field-meta.xml
<CustomField>
    <fullName>Machine_and_Tools__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Machine and Tools</label>
    <referenceTo>Machine_and_Tools__c</referenceTo>
    <relationshipLabel>Operations</relationshipLabel>
    <relationshipName>Operations</relationshipName>
    <type>Lookup</type>
</CustomField>