force-app/main/default/objects/Operations__c/fields/Operation_Status__c.field-meta.xml
<CustomField>
    <fullName>Operation_Status__c</fullName>
    <label>Operation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial</fullName>
            </value>
            <value>
                <fullName>Mid-Life</fullName>
            </value>
            <value>
                <fullName>Final Stage</fullName>
            </value>
            <value>
                <fullName>Depleted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>