force-app/main/default/objects/Operations__c/fields/Operations_Goal__c.field-meta.xml
<CustomField>
    <fullName>Operations_Goal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operations Goal</label>
    <referenceTo>Operations_Goal__c</referenceTo>
    <relationshipLabel>Operations</relationshipLabel>
    <relationshipName>Operations</relationshipName>
    <type>Lookup</type>
</CustomField>