force-app/main/default/objects/Operations__c/fields/Site_Manager__c.field-meta.xml
<CustomField>
    <fullName>Site_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Manager</label>
    <referenceTo>Site_Manager__c</referenceTo>
    <relationshipLabel>Operations</relationshipLabel>
    <relationshipName>Operations</relationshipName>
    <type>Lookup</type>
</CustomField>