force-app/main/default/objects/Operations__c/fields/TestViewHereSeeMee__c.field-meta.xml
<CustomField>
    <fullName>TestViewHereSeeMee__c</fullName>
    <label>TestViewHereSeeMee</label>
    <length>23</length>
    <type>Text</type>
</CustomField>