force-app/main/default/objects/Operations__c/fields/Total_Investment__c.field-meta.xml
<CustomField>
    <fullName>Total_Investment__c</fullName>
    <defaultValue>10000000</defaultValue>
    <label>Total Investment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>